# multi-party-schnorr

./: Cargo.toml
src/: lib.rs
src/protocols/: mod.rs
src/protocols/threshold_schnorr/state_machine/: keygen.rs  mod.rs  sign.rs
src/protocols/threshold_schnorr/state_machine/keygen/: rounds.rs
src/protocols/threshold_schnorr/state_machine/sign/: rounds.rs
src/protocols/thresholdsig/: bitcoin_schnorr.rs
